Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,9 @@
     <body>
         <h1>Aqui vamos a hacer un blog post</h1>
     <p>y este es el parrafo de inicio</p>
+    <p>
+        Los blogs de keim y que creara keim son lo mejor y sere el mejor
+        para lograr un fuerte futuro para hitomi.
+    </p>
     </body>
 </html> 
