--- a/blogpost.html
+++ b/blogpost.html
@@ -4,18 +4,17 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-    <p>y este es el parrafo de inicio</p>
-    <p>
-        Los blogs de keim y que creara keim son lo mejor y sere el mejor
-        para lograr un fuerte futuro para hitomi.
-    </p>
-<p>y este es el parrafo de inicio</p>
-<p>
-    Los blogs de keim y que creara keim son lo mejor y sere el mejor
-    para lograr un fuerte futuro para hitomi.
-    para lograr unirlos y que funcionen bien
-</p>
-
+        <div id="container">
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
+            </div>
+        </div>
     </body>
 </html>
